--- a/efics-2025/src/Home.css
+++ b/efics-2025/src/Home.css
@@ -44,7 +44,7 @@ body {
     height: 400px;
     text-align: center;
     justify-content: center;
-    background-image: linear-gradient(rgba(0, 50, 0, 0.7), rgba(0, 50, 0, 0.7)), url('image1.png');
+    background-image: linear-gradient(rgba(0, 50, 0, 0.7), rgba(0, 50, 0, 0.7)), url('ad.png');
     background-position: center;
     background-repeat:repeat;
     color:black;
@@ -93,7 +93,7 @@ body {
   
   /* Keynote Speaker Section */
   .outer-section{
-    background-image: url("image13.png");
+    background-image: url("tree.png");
     display: flex;
     flex-direction: column;
   }
